<resources>
    <string name="app_name">新视界</string>
    <string name="loading">加载中</string>
    <string name="auth_login_ing">正在授权登录</string>
    <string name="confirm">确定</string>
    <string name="cannot_follow_self">不能关注自己</string>
    <string name="wechat">微信</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="qzone">QQ空间</string>
    <string name="home">首页</string>
    <string name="follow">关注</string>
    <string name="my_follow">我的关注</string>
    <string name="my_follow_2">TA的关注</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="mp4_error">播放失败</string>
    <string name="load_failure">加载失败</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="login_tip">注册登录后体验更多精彩瞬间</string>
    <string name="input_phone_num">输入手机号码</string>
    <string name="input_phone_code">输入验证码</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="other_login">其他登录方式</string>
    <string name="login">立即登录</string>
    <string name="login_auth_failure">授权失败</string>
    <string name="login_auth_cancle">授权取消</string>
    <string name="login_auth_success">授权成功</string>
    <string name="recommend">推荐</string>
    <string name="hot">热门</string>
    <string name="zuoping">作品</string>
    <string name="like">喜欢</string>
    <string name="fans">粉丝</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_fans_2">TA的粉丝</string>
    <string name="cancel">取消</string>
    <string name="search_input">搜索用户 | 视频</string>
    <string name="search">搜索</string>
    <string name="please_input_content">请输入内容</string>
    <string name="following">已关注</string>
    <string name="share_to">分享至</string>
    <string name="share_to_2">分享至（左右滑动更多分享）</string>
    <string name="save">保存</string>
    <string name="black">拉黑</string>
    <string name="copy">复制</string>
    <string name="report">举报</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_success">分享成功</string>
    <string name="clip_success">复制成功</string>
    <string name="download_success">下载成功</string>
    <string name="download_fail">下载失败</string>
    <string name="storage_permission_refused">您拒绝了文件读写的权限，请到设置中修改</string>
    <string name="camera_permission_refused">您拒绝了使用摄像头的权限，请到设置中修改</string>
    <string name="record_audio_permission_refused">您拒绝了使用麦克风的权限，请到设置中修改</string>
    <string name="location_permission_refused">您拒绝了使用定位的权限，请到设置中修改</string>
    <string name="read_phone_status_permission_refused">您拒绝了读取手机信息的权限，请到设置中修改</string>
    <string name="call_permission_refused">您拒绝了打电话的权限，请到设置中修改</string>
    <string name="downloading">下载中</string>
    <string name="report_success">举报成功</string>
    <string name="send">发送</string>
    <string name="no_comment">暂无评论，快来抢沙发吧</string>
    <string name="comment_load_failure">评论加载失败</string>
    <string name="no_data">暂无数据</string>
    <string name="comment">评论</string>
    <string name="reply">回复</string>
    <string name="cannot_like_self">不能给自己点赞</string>
    <string name="cannot_reply_self">不能回复自己</string>
    <string name="comment_tips_null">回复内容不能为空</string>
    <string name="say_something">说点什么吧~</string>
    <string name="please_login">请先登录</string>
    <string name="please_input_mobile">请输入手机号</string>
    <string name="phone_num_error">请输入正确的手机号</string>
    <string name="get_valid_code_2">重新获取</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="login_tips">登录即代表同意服务和隐私条款</string>
    <string name="please_input_report_reason">请填写举报理由</string>
    <string name="submit">提交</string>
    <string name="choose_report_reason">选择举报理由</string>
    <string name="add_follow">+ 关注</string>
    <string name="private_msg">私信</string>
    <string name="setting">设置</string>
    <string name="watch_reply">查看回复</string>
    <string name="black_list">黑名单</string>
    <string name="my_auth">我的认证</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="clear_ing">清除中</string>
    <string name="no_cache">暂无缓存</string>
    <string name="edit_profile">编辑资料</string>
    <string name="nickname">昵称</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="birth_day">生日</string>
    <string name="gender">性别</string>
    <string name="sign">签名</string>
    <string name="sign_hint">留下点什么吧~</string>
    <string name="sign_hint2">这家伙很懒，什么都没有留下。</string>
    <string name="please_input_birthday">请输入生日</string>
    <string name="please_input_gender">请设置性别</string>
    <string name="please_input_right_date">请选择正确的日期</string>
    <string name="update_success">修改成功</string>
    <string name="no_age">年龄未填写</string>
    <string name="choose_flie">选择文件</string>
    <string name="cancel_choose">取消选择</string>
    <string name="cancel_photo">取消拍照</string>
    <string name="cancel_crop">取消裁剪</string>
    <string name="get_zan">获赞</string>
    <string name="upload_failed">上传失败</string>
    <string name="video_uploading">上传中</string>
    <string name="publish_success">发布成功</string>
    <string name="upload_file_not_exists">文件不存在</string>
    <string name="video_cancel_make">取消编辑</string>
    <string name="video_edit_fail">编辑失败</string>
    <string name="processing">处理中</string>
    <string name="video_publish">发布视频</string>
    <string name="cannot_zan_self">不能给自己点赞</string>
    <string name="video_say">喜欢就要说出来</string>
    <string name="video_loading">努力加载中</string>
    <string name="reload">重新加载</string>
    <string name="beauty">美颜</string>
    <string name="next">下一步</string>
    <string name="upload">上传</string>
    <string name="local_video">本地视频</string>
    <string name="choose_music">选择音乐</string>
    <string name="start_record_2">开拍</string>
    <string name="search_music_input">搜索歌曲名称</string>
    <string name="search_user_name">搜索用户昵称</string>
    <string name="hot_music">热门歌曲</string>
    <string name="use">使用</string>
    <string name="cannot_record_next">录制时间太短</string>
    <string name="finish_record">录制完成</string>
    <string name="video_compressing">视频预处理中</string>
    <string name="video_generating">视频生成中</string>
    <string name="video_compress_failed">视频预处理失败</string>
    <string name="cancel_compress">取消视频预处理</string>
    <string name="video_load_error">视频加载失败</string>
    <string name="music">音乐</string>
    <string name="special">特效</string>
    <string name="cover">封面</string>
    <string name="filter">滤镜</string>
    <string name="choose_music_2">选音乐</string>
    <string name="give_up_edit">是否要放弃编辑？</string>
    <string name="beauty_shape">美型</string>
    <string name="meng">萌颜</string>
    <string name="beauty_meibai">美白</string>
    <string name="beauty_mopi">磨皮</string>
    <string name="beauty_baohe">饱和</string>
    <string name="beauty_fengnen">粉嫩</string>
    <string name="beauty_big_eye">大眼</string>
    <string name="beauty_face">瘦脸</string>
    <string name="tiezhi_download_failed">贴纸下载失败</string>
    <string name="cut">裁剪</string>
    <string name="time_special">时间特效</string>
    <string name="other_special">其他特效</string>
    <string name="cut_tip">请拖拽两侧滑块选择裁剪区域</string>
    <string name="none">无</string>
    <string name="time_ndz">慢动作</string>
    <string name="time_fanfu">反复</string>
    <string name="time_daofang">时光倒流</string>
    <string name="other_1">抖动</string>
    <string name="other_2">黑白</string>
    <string name="other_3">灵魂出窍</string>
    <string name="other_4">动感分屏</string>
    <string name="cancel2">撤销</string>
    <string name="cancel_generate_video">取消生成视频</string>
    <string name="generate_video_success">生成视频成功</string>
    <string name="generate_video_failed">生成视频失败</string>
    <string name="video_duration_too_short">视频长度太短</string>
    <string name="add_video_des">添加视频描述~</string>
    <string name="comfirm_publish">确认发布</string>
    <string name="video_edit_status_error">状态异常，停止编辑</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_wx">微信</string>
    <string name="share_wx_pyq">朋友圈</string>
    <string name="share_wx_facebook">facebook</string>
    <string name="share_wx_twitter">推特</string>
    <string name="video_publish_ing">发布中</string>
    <string name="no_location">未开启定位</string>
    <string name="music_volume">音量</string>
    <string name="music_original">原声</string>
    <string name="music_bgm">配乐</string>
    <string name="cut_music_tip">截取音频片段</string>
    <string name="please_choose_area">选择您所在的地区</string>
    <string name="area">地区</string>
    <string name="no_city">城市未填写</string>
    <string name="record_failed">录制失败</string>
    <string name="can_update">可更新</string>
    <string name="no_update">无更新</string>
    <string name="latest_version">已经是最新版本</string>
    <string name="apk_url_not_exist">下载地址无效</string>
    <string name="sorry">对不起~</string>
    <string name="search_no_data">没有搜索到相关内容</string>
    <string name="no_follow">你还没有关注任何人</string>
    <string name="do_follow">赶快去关注感兴趣的小伙伴吧</string>
    <string name="no_fans">你还没有粉丝</string>
    <string name="do_fans">赶快邀请小伙伴来关注你吧</string>
    <string name="all_replys">查看全部回复</string>
    <string name="refresh_down_1">下拉可以刷新</string>
    <string name="refresh_down_2">松开立即刷新</string>
    <string name="refresh_down_3">正在刷新数据中</string>
    <string name="refresh_up_1">上拉加载更多</string>
    <string name="refresh_up_2">松开加载更多</string>
    <string name="refresh_up_3">正在加载更多中</string>
    <string name="music_suffix">创作的原声</string>
    <string name="choose_special">点击选择特效</string>
    <string name="long_press_add_special">长按添加特效</string>
    <string name="click_change_avatar">点击更换头像</string>
    <string name="no_like_video">你赞过的作品都会放到这里</string>
    <string name="no_like_video_2">TA还没有喜欢的视频</string>
    <string name="no_follow_2">TA还没有关注任何人</string>
    <string name="no_fans_2">TA还没有任何粉丝</string>
    <string name="no_follow_3">关注列表为空</string>
    <string name="do_follow_2">你关注的人的作品都会放到这里哦</string>
    <string name="no_work_video">TA还没有作品</string>
    <string name="send_msg">发送消息...</string>
    <string name="send_too_fast">操作频繁</string>
    <string name="you_are_blacked">对方暂时不接收你的消息</string>
    <string name="at_me">\@我的</string>
    <string name="zan">赞</string>
    <string name="msg_type_image">[图片]</string>
    <string name="msg_type_voide">[语音]</string>
    <string name="msg_type_location">[位置]</string>
    <string name="image">图片</string>
    <string name="camera">拍摄</string>
    <string name="voice">语音</string>
    <string name="location">位置</string>
    <string name="message_send_failed">消息发送失败</string>
    <string name="choose_image">所有照片</string>
    <string name="no_image">没有找到图片</string>
    <string name="please_choose_image">请选择图片</string>
    <string name="map_not_loaded">地图未加载</string>
    <string name="address_failed">未获取到地址</string>
    <string name="get_location_failed">获取位置失败</string>
    <string name="press_say">按住\t说话</string>
    <string name="release_end">松开\t结束</string>
    <string name="record_audio_too_short">录音时间太短</string>
    <string name="follow_you">关注了你</string>
    <string name="zan_video">赞了您的作品</string>
    <string name="zan_comment">赞了您的评论</string>
    <string name="no_zan">你还没有被赞哦</string>
    <string name="choose_contacts">选择联系人</string>
    <string name="my_following">我关注的人</string>
    <string name="comment_video">评论了您的作品</string>
    <string name="at_friends">召唤好友</string>
    <string name="search_at_name">输入您要@的好友昵称</string>
    <string name="you_have_at_him">你已经@过他了</string>
    <string name="you_have_at_him_2">已经@了相同昵称的人</string>
    <string name="no_at">你还没有被@哦</string>
    <string name="at_msg_str">的评论中@了你</string>
    <string name="zai">在</string>
    <string name="near">附近</string>
    <string name="please_check_location">请检查是否开启定位</string>
    <string name="my_collect">我的收藏</string>
</resources>