<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
    >

    <include
        android:id="@+id/title"
        layout="@layout/view_title"
        />

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:onClick="editProfileClick"
        android:text="@string/save"
        android:textColor="@color/global"
        android:textSize="16sp"
        />

    <RelativeLayout
        android:id="@+id/btn_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="editProfileClick"
        >

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4d110d24"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon_user_camera"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/click_change_avatar"
        android:textColor="@color/gray2"
        android:textSize="14sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="30dp"
        android:background="@color/black1"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/nickname"
                android:textColor="@color/gray2"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_input_nickname"
                android:maxLength="8"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="@color/gray2"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <View style="@style/line"/>

        <LinearLayout
            android:id="@+id/btn_birth_day"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="editProfileClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/birth_day"
                android:textColor="@color/gray2"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_input_birthday"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="@color/gray2"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <View style="@style/line"/>

        <LinearLayout
            android:id="@+id/btn_gender"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="editProfileClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/gender"
                android:textColor="@color/gray2"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_input_gender"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="@color/gray2"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <View style="@style/line"/>

        <LinearLayout
            android:id="@+id/btn_area"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:onClick="editProfileClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/area"
                android:textColor="@color/gray2"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_choose_area"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="@color/gray2"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <View style="@style/line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="30dp"
                android:gravity="center_vertical"
                android:text="@string/sign"
                android:textColor="@color/gray2"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/sign"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_toRightOf="@id/text1"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/sign_hint"
                android:maxLength="20"
                android:paddingTop="15dp"
                android:textColor="#ffff"
                android:textColorHint="@color/gray2"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/sign_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/sign"
                android:text="0/20"
                android:textColor="@color/gray2"
                android:textSize="14sp"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>